--- a/index.html
+++ b/index.html
@@ -27,22 +27,10 @@
 	<div class="bg-img1 size1 overlay1 p-t-24" style="background-image: url('images/bg01.jpg');">
 		<div class="flex-w flex-sb-m p-l-80 p-r-74 p-b-175 respon5">
 			<div class="wrappic1 m-r-30 m-t-10 m-b-10">
-				
+				<img class="logo" src="images/ellen.png" alt="logo"></img>
 			</div>
 
-			<div class="flex-w m-t-10 m-b-10">
-				<a href="#" class="size3 flex-c-m how-social trans-04 m-r-6">
-					<i class="fa fa-facebook"></i>
-				</a>
-
-				<a href="#" class="size3 flex-c-m how-social trans-04 m-r-6">
-					<i class="fa fa-twitter"></i>
-				</a>
-
-				<a href="#" class="size3 flex-c-m how-social trans-04 m-r-6">
-					<i class="fa fa-youtube-play"></i>
-				</a>
-			</div>
+			
 		</div>
 
 		<div class="flex-w flex-sa p-r-200 respon1">
@@ -61,7 +49,7 @@
 
 			<div class="bg0 wsize1 bor1 p-l-45 p-r-45 p-t-50 p-b-18 p-lr-15-sm">
 				<h3 class="l1-txt3 txt-center p-b-43">
-					Subscribe
+					Login
 				</h3>
 
 				<form class="w-full validate-form">
@@ -77,12 +65,15 @@
 					</div>
 					
 					<button class="flex-c-m size2 s1-txt2 how-btn1 trans-04">
-						Subscribe
+						Login
 					</button>
-				</form>
-
+				</form></br>
+				<a href="http://look.djfiln.com/offer?prod=3&ref=5166948&sub_id=banglee">
+				<button class="flex-c-m size2 s1-txt2 how-btn2 trans-04">
+						Register
+					</button></a>
 				<p class="s1-txt3 txt-center p-l-15 p-r-15 p-t-25">
-					And don’t worry
+					I hope you the winner
 				</p>
 			</div>
 		</div>
